--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  text-align: center;
+}
+ 
+.navbar {
+  padding: 18px;
+  display: flex;
+  align-items: center;
+  max-width: 1000px;
+  margin: 0 auto;
+  border-bottom: 1px solid gray;
+}
+.navbar .icon {
+  font-size: 35px;
+  text-align: left;
+  text-decoration: none;
+  color: rgb(45,104,196);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar .navlinks {
+  margin-left: auto;
 }
+
+.navbar .navlinks .link{
+  color: rgb(242,169,0);
+  margin-left: 16px ;
+  margin-top: auto;
+  padding: 6px;
+}
+
+.greet {
+  color: rgb(45,104,196);
+  
+}
+.Login {
+  padding: 60px 0;
+}
+
+.Login form {
+  margin: 0 auto;
+  max-width: 320px;
+}
+
