--- a/client/src/index.css
+++ b/client/src/index.css
@@ -150,3 +150,28 @@
   max-width: 320px;
 }
 
+/* SearchBar */
+#searchBar {
+  width: 100%;
+  height: 30px;
+  border-radius: 10px;
+  border: 3px solid #eaeaea;
+  padding: 5px 15px;
+  font-size: 16px;
+  text-align: left;
+}
+
+#searchWrapper {
+  position:relative;
+}
+
+#searchWrapper::after {
+  content: '🔍';
+  position: absolute;
+  top: 11px;
+  left: 205px;
+}
+
+::placeholder {
+  text-align: left;
+}
