--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,12 +17,27 @@
   color: rgb(45,104,196);
 }
 
-.navbar .navlinks {
+/* SearchBar */
+.navbar #searchWrapper {
   margin-left: auto;
 }
 
+.navbar #searchBar {
+  width: 100%;
+  height: 20px;
+  border-radius: 10px;
+  border: 3px solid #eaeaea;
+  padding: 5px 15px;
+  font-size: 16px;
+  text-align: left;
+}
+
+.navbar .navlinks {
+  margin-left: 16px;
+}
+
 .navbar .navlinks .link{
-  color: rgb(242,169,0);
+  color: rgb(45,104,196);
   margin-left: 16px ;
   margin-top: auto;
   padding: 6px;
@@ -150,28 +165,3 @@
   max-width: 320px;
 }
 
-/* SearchBar */
-#searchBar {
-  width: 100%;
-  height: 30px;
-  border-radius: 10px;
-  border: 3px solid #eaeaea;
-  padding: 5px 15px;
-  font-size: 16px;
-  text-align: left;
-}
-
-#searchWrapper {
-  position:relative;
-}
-
-#searchWrapper::after {
-  content: '🔍';
-  position: absolute;
-  top: 11px;
-  left: 205px;
-}
-
-::placeholder {
-  text-align: left;
-}
