--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rowdies&family=Tittillium+Web&display=swap');
+
+
 /* * {
   text-align: center;
 } */
@@ -197,3 +200,65 @@
   max-width: 320px;
 }
 
+/* Calendar */
+.strike {
+  text-decoration: line-through;
+}
+
+td{
+  border: 1px solid black;
+  padding: 5px;
+}
+
+.todo-input{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 1rem;
+}
+
+#todoTable{
+  margin-top:  1rem;
+}
+
+input:-ms-input-placeholder, input ::-webkit-input-placeholder, input:placeholder, input{
+  color: #ed6a5e;
+}
+
+h3{
+  background-color: #ed6a5e;
+  color: #ffaf87;
+  padding: 1rem;
+  font-family: 'Rowdies', cursive;
+}
+
+body{
+  font-family: 'Tittillium Web', sans-serif;
+}
+
+.todo-block{
+  border: 1px solid #ff8e72;
+  padding: 1rem;
+  border-radius: 20px;
+  color: #a11e12;
+}
+
+/* for mobile or small screen devic
+@media screen and (max-width: 767px) {
+  #todoTable, .todo-calendar{
+    margin-top:  1rem;
+  }
+}*/
+
+/* for tablets or laptops or desktoops
+@media screen and (min-width: 768px){
+  .todo-grid-parent{
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    column-gap: 1rem;
+  }
+}*/
+
+#calendar{
+  position: sticky;
+  top: 0;
+}
